--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "build": "medusa plugin:build",
     "dev": "medusa plugin:develop",
-    "prepublishOnly": "medusa plugin:build"
+    "prepublishOnly": "medusa plugin:build",
+    "start:server": "medusa develop"
   },
   "devDependencies": {
     "@medusajs/admin-sdk": "2.4.0",
@@ -50,6 +51,7 @@
     "@types/uuid": "^10.0.0",
     "awilix": "^8.0.1",
     "pg": "^8.13.0",
+    "prettier": "^3.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
