--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@medusajs/js-sdk": "^2.7.1",
+    "@medusajs/types": "^2.7.1",
     "medusa-digital-asset-plugin": "file:.yalc/medusa-digital-asset-plugin",
     "uuid": "^11.1.0"
   }
