refactor: 어드민 digital asset 위젯 - 이미지 생성되고 asset 생성되는것까지 확인 및 구조 변경

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "@medusajs/js-sdk": "^2.7.1",
     "@medusajs/types": "^2.7.1",
+    "dayjs": "^1.11.13",
     "medusa-digital-asset-plugin": "file:.yalc/medusa-digital-asset-plugin",
     "uuid": "^11.1.0"
   }
