--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
     "@swc/core": "1.5.7",
+    "@types/lodash": "^4.17.16",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
