refactor: 페이지네이션 타입 통일화

--- a/src/admin/tsconfig.json
+++ b/src/admin/tsconfig.json
@@ -18,7 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* Paths */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["../types/*", "./*"]
+    }
   },
   "include": [".", "../_constants", "../api/admin/variant-digital-asset.tsx"]
 }
