--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "ts-node": {
