refactor: 절대경로 안되서 상대경로로 다시 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "checkJs": false,
-    "strictNullChecks": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "strictNullChecks": true
   },
   "ts-node": {
     "swc": true
