refactor: 경로 수정 및 없는 파일 생성 및 도커 파일변경

--- a/src/admin/tsconfig.json
+++ b/src/admin/tsconfig.json
@@ -23,8 +23,8 @@
     /* Paths */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../types/*", "./*"]
+      "@/*": ["./*"]
     }
   },
-  "include": [".", "../_constants", "../api/admin/variant-digital-asset.tsx"]
+  "include": ["."]
 }
