--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,21 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/medusa-v2
-DB_URL=postgres://postgres:postgres@localhost:5432/medusa-v2
-DB_HOST=localhost
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=postgres
+
+# Database 설정
+DATABASE_URL=''
+
+# Redis 설정
+REDIS_URL=''
+
+# PostgreSQL 설정
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
+POSTGRES_DB=''
+
+# PgAdmin 설정
+PGADMIN_DEFAULT_EMAIL=''
+PGADMIN_DEFAULT_PASSWORD=''
+
+# Medusa 관련 설정
+JWT_SECRET=''
+COOKIE_SECRET=''
+ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.medusajs.com
+STORE_CORS=http://localhost:8000,https://docs.medusajs.com
