--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,33 @@
 version: "3.8"
-
 services:
-  db:
-    image: postgres:15
-    container_name: my-postgres
-    restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: pass1234
-      POSTGRES_DB: postgres
+  postgres:
+    image: postgres:latest
     ports:
       - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - medusa_postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - medusa_redis_data:/data
 
   pgadmin:
     image: dpage/pgadmin4
-    container_name: pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin1234
     ports:
       - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: jungsik.jeong@lcnine.kr
+      PGADMIN_DEFAULT_PASSWORD: 123123123
     depends_on:
-      - db
+      - postgres
 
 volumes:
-  pgdata:
+  medusa_postgres_data:
+  medusa_redis_data:
