--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
   "files": [
-    ".medusa/server"
+    ".medusa/server",
+    ".medusa/types"
   ],
   "exports": {
     "./package.json": "./package.json",
