--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2",
     "vite": "^5.2.11",
