chroe: 메두사 최신버전으로 업데이트

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "medusa-digital-asset-plugin",
-  "version": "0.0.8",
+  "name": "almond-digital-asset-plugin",
+  "version": "0.0.9",
   "description": "A starter for Medusa plugins.",
   "author": "Medusa (https://medusajs.com)",
   "license": "MIT",
@@ -39,19 +39,19 @@
     "start:server": "NODE_OPTIONS='--require tsconfig-paths/register' medusa develop"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.8.8",
-    "@medusajs/cli": "2.8.8",
-    "@medusajs/framework": "2.8.8",
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
     "@medusajs/icons": "2.8.8",
-    "@medusajs/medusa": "2.8.8",
-    "@medusajs/test-utils": "2.8.8",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/test-utils": "2.11.3",
     "@medusajs/ui": "4.0.4",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
-    "@swc/core": "1.5.7",
+    "@swc/core": "^1.7.28",
     "@types/lodash": "^4.17.16",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.0.0",
@@ -74,12 +74,12 @@
     "zod": "^3.22.4"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "2.8.8",
-    "@medusajs/cli": "2.8.8",
-    "@medusajs/framework": "2.8.8",
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
     "@medusajs/icons": "2.8.8",
-    "@medusajs/medusa": "2.8.8",
-    "@medusajs/test-utils": "2.8.8",
+    "@medusajs/medusa": "2.11.3",
+    "@medusajs/test-utils": "2.11.3",
     "@medusajs/ui": "4.0.4",
     "@mikro-orm/cli": "6.4.3",
     "@mikro-orm/core": "6.4.3",
@@ -94,8 +94,8 @@
     "node": ">=20"
   },
   "dependencies": {
-    "@medusajs/js-sdk": "^2.8.8",
-    "@medusajs/types": "^2.8.8",
+    "@medusajs/js-sdk": "2.11.3",
+    "@medusajs/types": "2.11.3",
     "dayjs": "^1.11.13",
     "uuid": "^11.1.0",
     "zod": "^3.22.4",
