--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@mikro-orm/knex": "6.4.16",
     "@mikro-orm/migrations": "6.4.16",
     "@mikro-orm/postgresql": "6.4.16",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "@swc/core": "^1.7.28",
     "@types/lodash": "^4.17.16",
     "@types/multer": "^1.4.12",
