--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/cli": "2.11.3",
+    "@medusajs/draft-order": "^2.11.3",
     "@medusajs/framework": "2.11.3",
     "@medusajs/icons": "2.11.3",
     "@medusajs/medusa": "2.11.3",
